# YonseiAIContest

./: LICENSE
.devcontainer/: devcontainer.json
AI-contest/: .env.example  .gitignore  README.md  catchat.py  main.py  pyproject.toml  requirements.txt
AI-contest/vectorstore_cache/: index.faiss  index.pkl
AI-contest/vectorstore_cache_pdf/: index.pkl
AI-contest/vectorstore_cache_web/: index.faiss  index.pkl
