[project]
name = "ai-contest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.0",
    "langchain>=1.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "lxml>=6.0.2",
    "pandas>=2.0.0",
    "pdfplumber>=0.11.8",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
